--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/env": "^4.3.0",
     "@fastify/jwt": "^7.2.3",
     "@types/node": "^20.9.2",
     "fastify": "^4.24.3",
