--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@fastify/env": "^4.3.0",
     "@fastify/jwt": "^7.2.3",
+    "@fastify/mongodb": "^8.0.0",
     "@types/node": "^20.9.2",
     "fastify": "^4.24.3",
     "nodemon": "^3.0.1",
