--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cookie": "^9.2.0",
     "@fastify/env": "^4.3.0",
     "@fastify/jwt": "^7.2.3",
     "@fastify/mongodb": "^8.0.0",
@@ -20,6 +21,7 @@
     "fastify": "^4.24.3",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "zod": "^3.22.4"
   }
 }
