added signin and singup route

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@fastify/env": "^4.3.0",
     "@fastify/jwt": "^7.2.3",
     "@fastify/mongodb": "^8.0.0",
+    "@fastify/sensible": "^5.5.0",
     "@types/node": "^20.9.2",
+    "argon2": "^0.31.2",
     "fastify": "^4.24.3",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
