--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fastify/jwt": "^7.2.3",
     "@fastify/mongodb": "^8.0.0",
     "@fastify/sensible": "^5.5.0",
+    "@fastify/websocket": "^8.2.0",
     "@types/node": "^20.9.2",
     "argon2": "^0.31.2",
     "fastify": "^4.24.3",
@@ -25,5 +26,8 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
     "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "@types/ws": "^8.5.10"
   }
 }
