--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@types/node": "^20.9.2",
     "argon2": "^0.31.2",
     "fastify": "^4.24.3",
+    "fastify-socket.io": "^5.0.0",
     "nodemon": "^3.0.1",
+    "socket.io": "^4.7.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
     "zod": "^3.22.4"
