--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/cookie": "^9.2.0",
+    "@fastify/cors": "^8.4.1",
     "@fastify/env": "^4.3.0",
     "@fastify/jwt": "^7.2.3",
     "@fastify/mongodb": "^8.0.0",
