--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fastify/websocket": "^8.2.0",
     "@types/node": "^20.9.2",
     "argon2": "^0.31.2",
+    "cloudinary": "^1.41.0",
     "fastify": "^4.24.3",
     "fastify-socket.io": "^5.0.0",
     "nodemon": "^3.0.1",
