--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "@fastify/env": "^4.3.0",
     "@fastify/jwt": "^7.2.3",
     "@fastify/mongodb": "^8.0.0",
+    "@fastify/multipart": "^8.0.0",
     "@fastify/sensible": "^5.5.0",
     "@fastify/websocket": "^8.2.0",
     "@types/node": "^20.9.2",
     "argon2": "^0.31.2",
-    "cloudinary": "^1.41.0",
     "fastify": "^4.24.3",
     "fastify-socket.io": "^5.0.0",
+    "imagekit": "^4.1.4",
+    "multipart": "link:@types/@fastify/multipart",
     "nodemon": "^3.0.1",
     "socket.io": "^4.7.2",
     "ts-node": "^10.9.1",
