--- a/package.json
+++ b/package.json
@@ -14,16 +14,26 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/cookie": "^9.2.0",
+    "@fastify/cors": "^8.4.1",
     "@fastify/env": "^4.3.0",
     "@fastify/jwt": "^7.2.3",
     "@fastify/mongodb": "^8.0.0",
+    "@fastify/multipart": "^8.0.0",
     "@fastify/sensible": "^5.5.0",
+    "@fastify/websocket": "^8.2.0",
     "@types/node": "^20.9.2",
     "argon2": "^0.31.2",
     "fastify": "^4.24.3",
+    "fastify-socket.io": "^5.0.0",
+    "imagekit": "^4.1.4",
+    "multipart": "link:@types/@fastify/multipart",
     "nodemon": "^3.0.1",
+    "socket.io": "^4.7.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
     "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "@types/ws": "^8.5.10"
   }
 }
