--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@types/node": "^20.9.2",
     "argon2": "^0.31.2",
     "fastify": "^4.24.3",
+    "fastify-plugin": "^4.5.1",
     "fastify-socket.io": "^5.0.0",
     "imagekit": "^4.1.4",
     "multipart": "link:@types/@fastify/multipart",
     "nodemon": "^3.0.1",
+    "redis": "^4.6.12",
     "socket.io": "^4.7.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
